2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_filemanager.php: fix bug that the url content "//" in
	cases for example install in root of www directory. Only fix in this part
	of source code because the rest of sources run fine.
	Fixes: 2903005

2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* index.php: clean source code, the blank end line in the end of document
	and show in the browser too.
	* include/functions_ui.php, operation/agentes/alerts_status.php: add new
	colummn, the action column that it show the actions of alert.
	* godmode/alerts/alert_templates.php: add the 'Time threshold' in the
	tooltip.

2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_modules.php: fix the deletion of module in the function
	"delete_agent_module" for change the name to avoid the row collision. This
	change is advised by Sancho lerena.

2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_io.php, include/functions.php: change and add functions
	for manage the input output with correct encoding and decoding.

	*include/functions_html.php, include/functions_ui.php,
	operation/agentes/status_monitor.php,
	operation/agentes/estado_ultimopaquete.php,
	operation/agentes/estado_monitores.php: change the function "salida_limpia"
	for "safe_output" and other changes.

2009-11-25  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.php: add column status of alert in alert
	management view in agent.

2009-11-22  Raul Mateos  <raulofpandora@gmail.com>

	* images/spinner.png, images/background-li.png: New images converted
	from gif.

	* *.php: Changed several files from spinner.gif to spinner.png.

	* extensions/update_manager/settings.php: Changed header.

2009-11-21  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.php, operation/events/events.php,
	operation/snmpconsole/snmp_view.php: Use down icon instead wand icon, 
	due to wand is reserved for creation purposes.
